--- a/app/assets/stylesheets/baskets.css.scss
+++ b/app/assets/stylesheets/baskets.css.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
-.carts, #side #cart {
+.basket, #side #basket {
   /* END_HIGHLIGHT */
   .item_price, .total_line {
     text-align: right;
