--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,9 +20,11 @@
 </div>
 <div id="columns">
   <div id="side">
-    <div id="cart">
+    <div id="basket">
+
       <%= render @basket %>
-      </div>
+
+          </div>
     <ul>
       <li><a href="http://www....">Home</a></li>
       <li><a href="http://www..../faq">Questions</a></li>
@@ -39,3 +41,4 @@
 <!-- END_HIGHLIGHT -->
 </body>
 </html>
+
