--- a/app/views/queue_groceries/_queue_grocery.html.erb
+++ b/app/views/queue_groceries/_queue_grocery.html.erb
@@ -5,8 +5,17 @@ attribuites using the relation @basket.queue_groceries that the template
 carries. with that we are calling all the queue_groceries objects we
 have in that basket and because of that we can just here make the singular
 call queue_grocery.quantity that rails knows which object the call is for-->
+
+    <% if  queue_grocery == @current_item %>
+    <tr id="current_item">
+
+      <% else %>
     <tr>
+      <% end %>
+
       <td>  <%= queue_grocery.quantity %> &times;</td>
       <td><%= queue_grocery.product.title %></td>
       <td class="item price"><%= number_to_currency(queue_grocery.total_price) %></td>
+      <td><%= button_to 'V', decrement_queue_grocery_url(queue_grocery), method: :put, remote: true %></td>
     </tr>
+
