--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -10,7 +10,8 @@
 <h1>Your Catalog</h1>
 <!-- now in this file we created a loop for all the objects loaded in @products to be displayed in the html.
 we pass the block with the object product and then we call the  attributes of the instance of Product. -->
-<% @products.each do |product| %>
+<% cache ['store', Product.latest ] do %>
+  <% @products.each do |product| %>
     <div class="entry"> <%= image_tag(product.image_url) %>
     <!-- here we have the attribute :image_url called on the object product as parameter for image_tag that, acccording
      to rails api Returns an HTML image tag for the source. The source can be a full path or a file. in our case it is
@@ -27,15 +28,15 @@ we pass the block with the object product and then we call the  attributes of th
         <%= number_to_currency(product.price) %>
 
       </span>
-    <%= button_to 'Add to Basket',  queue_groceries_path(product_id: product) %>
+    <%= button_to 'Add to Basket',  queue_groceries_path(product_id: product), remote: true %>
     <!-- this method button_to calls a http method POST. according to our routes settings this method
     combined to queue_groceries_path redirect us to the create method in the  queue_groceries_controller
      POST   /queue_groceries(.:format)          queue_groceries#create. THen we pass the option product_id
      through which rails will know that we want the id of that very object in case. -->
-
     </div>
     </div>
 
 
+  <% end %>
 <% end %>
 
