--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -31,8 +31,8 @@
     This will refer to our model as the data entry for the Order table in the
     specific column. -->
 
-    <%= f.select :pay_type, PaymentType.names, prompt: 'Select a payment method' %>
-    <% #f.select :pay_type, Order::PAYMENT_TYPES, prompt: 'Select a payment method' %>
+    <%# f.select :pay_type, PaymentType.names, prompt: 'Select a payment method' %>
+    <%=f.select :pay_type, Order::PAYMENT_TYPES, prompt: 'Select a payment method' %>
         <!-- In my understanding select is a method that creates a form field
         that has a drop-down list displaying a range of selection options according
         to what is made available in the parameters. we place our references in the
