visual change on application.html.erb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 <!-- START_HIGHLIGHT -->
 <div id="banner">
   <%= image_tag("logo.png") %>
-  <%= @page_title || "Tenha um bom dia dona Marines Bolzani ;) te amo!" %><!-- <label id="code.depot.e.title"/> -->
+  <%= @page_title || "Your Bookshelf" %><!-- <label id="code.depot.e.title"/> -->
 </div>
 <div id="columns">
   <div id="side">
