fixed users view prob and put ajax to work again

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,10 @@
 
 <h1>Listing Users</h1>
-<%= if notice %>
-<p id="notice"><%= notice %></p>
+    <% if notice %>
 
+    <p id="notice"><%= notice %></p>
+
+    <% end %>
 <table>
   <thead>
     <tr>
