css changes for side

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -56,11 +56,16 @@
 
     /* START_HIGHLIGHT */
     form, div {
+      font-size: small;
+
       display: inline;
+      color: whitesmoke;
+
     }
 
     input {
       font-size: small;
+
     }
 
     #basket {
