links store.html

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
     </div>
     <ul>
       <li><a href="http://vinisbookshelf.herokuapp.com">HOME</a></li>
-      <li><a href="http://vinisbookshelf.herokuapp.com/public/contact">CONTACT US</a></li>
+      <li><a href="http://vinisbookshelf.herokuapp.com/info/contact">CONTACT US</a></li>
       <br>
       <li><a href="http://vinisbookshelf.herokuapp.com/login">LOGIN</a></li>
 
