css in store.html

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 <!-- START_HIGHLIGHT -->
 <div id="banner">
   <%= link_to image_tag("bookshelp.jpg"), store_index_path %>
-  <%= link_to @page_title || "Vini's Bookshelf", store_index_path %><!-- <label id="code.depot.e.title"/> -->
+  <%=  @page_title || "Vini's Bookshelf" %><!-- <label id="code.depot.e.title"/> -->
 </div>
 <div id="columns">
   <div id="side">
